--- a/backend/package.json
+++ b/backend/package.json
@@ -28,10 +28,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.11",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^28.1.8",
     "@types/node": "^18.6.1",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
+    "drizzle-kit": "^0.23.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.6.0",
@@ -48,6 +52,10 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "better-sqlite3": "^11.1.2",
+    "cors": "^2.8.5",
+    "drizzle-orm": "^0.32.1",
+    "express": "^4.19.2",
     "jest-cucumber": "^3.0.1"
   }
 }
